Resize the counter size to prevent overlapping with the message text

--- a/source/compose/compose.css
+++ b/source/compose/compose.css
@@ -87,7 +87,7 @@
 
 .compose .counter {
 	position:				absolute;
-	right:					13px;
+	right:					10px;
 
 	color:					#4d5154;
 	font-weight:			bold;
